--- a/FixMyRideApp/app/src/main/res/layout/activity_main.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,17 @@
     android:background="@drawable/ic_launcher_background"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/appBannerIcon"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/app_banner_img"
+        app:layout_constraintBottom_toTopOf="@id/noAuthButtonsContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- Auth Buttons Container -->
     <LinearLayout
         android:id="@+id/noAuthButtonsContainer"
@@ -22,7 +33,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
-        android:background="@color/cardview_shadow_end_color"
+        android:background="@color/cardview_shadow_start_color"
         android:backgroundTint="@color/black">
 
         <Button
