--- a/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:paddingBottom="16dp"
+        android:paddingHorizontal="16dp"
+        android:background="@color/cardview_shadow_start_color">
 
         <!-- Title -->
         <TextView
@@ -92,33 +95,6 @@
                 android:layout_marginTop="10dp" />
         </LinearLayout>
 
-<!--        &lt;!&ndash; Affected Area &ndash;&gt;-->
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical"-->
-<!--            android:layout_marginBottom="16dp">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Affected Area"-->
-<!--                android:textColor="#FFFFFF"-->
-<!--                android:textSize="24sp" />-->
-
-<!--            <EditText-->
-<!--                android:id="@+id/affected_area"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Front Bumper, Rear Bumper, Trunk, Left-Back Body, Rear left tail light"-->
-<!--                android:textColor="#FFFFFF"-->
-<!--                android:textSize="14sp"-->
-<!--                android:background="@drawable/button_background"-->
-<!--                android:padding="12dp"-->
-<!--                android:maxHeight="70dp"-->
-<!--                android:layout_marginTop="10dp" />-->
-<!--        </LinearLayout>-->
-
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -132,12 +108,14 @@
                 android:layout_height="100dp"
                 android:maxHeight="200dp"
                 android:backgroundTint="@color/cardview_shadow_end_color">
-            <!-- ChipGroup to display selected tags -->
+
+                <!-- ChipGroup to display selected tags -->
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/selectedTagsChipGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:chipSpacing="8dp" />
+                app:chipSpacing="8dp"
+                />
             </ScrollView>
 
             <!-- AutoCompleteTextView for tag entry -->
@@ -147,7 +125,6 @@
                 android:layout_height="wrap_content"
                 android:hint="Add a tag"
                 android:inputType="text" />
-
         </LinearLayout>
 
         <!-- Note -->
