--- a/FixMyRideApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_sign_up.xml
@@ -8,13 +8,27 @@
     android:background="@drawable/ic_launcher_background"
     tools:context=".SignUpActivity">
 
+    <ImageView
+        android:id="@+id/appBannerIcon"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/app_banner_img"
+        app:layout_constraintBottom_toTopOf="@id/AuthContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
+        android:id="@+id/AuthContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
+        android:paddingBottom="16dp"
+        android:background="@color/cardview_shadow_start_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
