--- a/FixMyRideApp/app/src/main/res/values/brand_spiner_items.xml
+++ b/FixMyRideApp/app/src/main/res/values/brand_spiner_items.xml
@@ -3,8 +3,14 @@
     <string-array name="Brand_spinner_items">
         <item>Audi</item>
         <item>BMW</item>
-        <item>Mercedes</item>
-        <item>Suzuki</item>
+        <item>Chevrolete</item>
+        <item>Bmw</item>
         <item>Ford</item>
+        <item>Honda</item>
+        <item>Mazda</item>
+        <item>Mercedes-benz</item>
+        <item>Mini</item>
+        <item>Toyota</item>
+        <item>Volkswagen</item>
     </string-array>
 </resources>
