--- a/FixMyRideApp/app/src/main/res/values/brand_spiner_items.xml
+++ b/FixMyRideApp/app/src/main/res/values/brand_spiner_items.xml
@@ -3,7 +3,7 @@
     <string-array name="Brand_spinner_items">
         <item>Audi</item>
         <item>BMW</item>
-        <item>Chevrolete</item>
+        <item>Chevrolet</item>
         <item>Bmw</item>
         <item>Ford</item>
         <item>Honda</item>
