Added ReportActivity functionality and displaying of report based on reportId carried on intent, added displaying mechanisms for reports and the images attached to said Report

--- a/FixMyRideApp/app/src/main/res/layout/activity_report.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report.xml
@@ -8,7 +8,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:layout_marginTop="15dp"
+        android:background ="@color/cardview_shadow_start_color">
 
         <TextView
             android:id="@+id/titleText"
@@ -26,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Brand"
+            android:text="Brand:"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Model"
+            android:text="Model:"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Year"
+            android:text="Year:"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,16 +88,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Damaged Parts"
+            android:text="Damaged Parts:"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/yearLabel" />
 
-        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        <TextView
             android:id="@+id/damagedPartsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:shadowColor="@color/white"
             android:padding="8dp"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@id/damagedPartsLabel" />
@@ -105,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Estimated Cost"
+            android:text="Estimated Cost:"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Parts Websites"
+            android:text="Some links to help you in your search:"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
@@ -138,8 +141,8 @@
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/partsLinksLabel" />
 
-        <view class="androidx.recyclerview.widget.RecyclerView"
-            android:id="@+id/recyclerView"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/imagesRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
